# P2D

./: .gitignore  CMakeLists.txt  main.cpp
constants/: constant.cpp  constant.h
core/: CMakeLists.txt  Dockerfile  README.md  main.cpp
core/constants/: constant.cpp  constant.h
core/full_cell/: full_cell_solver.cpp  full_cell_solver.h
core/full_cell/stiffness/: stiffness_anode.cpp  stiffness_anode.h  stiffness_base.h  stiffness_cathode.cpp  stiffness_cathode.h  stiffness_separator.cpp  stiffness_separator.h
core/functions/: bv.cpp  functions.h  j0.cpp  kappa.cpp  uoc.cpp
core/integration/: integration_shapes.h
core/io/: coord_reader.h  redis_connector.cpp  redis_connector.h
core/mesh/: mesh.h  mesh_reader.cpp  mesh_reader.h
core/particle/: particle_solver.cpp  particle_solver.h  stiffness_generator.cpp  stiffness_generator.h
core/shaping/: primitive_type.h  primitives.cpp  primitives.h
mesh/: mesh_reader.cpp
particle/: particle_solver.cpp  particle_solver.h  stiffness_generator.cpp  stiffness_generator.h
python/: visualization.py
scripts/: visualization.py
web/fem-backend/: bun.lockb  package-lock.json  package.json  tsconfig.json
web/fem-backend/src/: index.ts
web/fem-webui/: README.md  bun.lockb  components.d.ts  package-lock.json  package.json  tsconfig.json
web/fem-webui/src/: App.vue  main.ts
web/fem-webui/src/views/: AboutView.vue  ChartView.vue
